# hackcarpathia-quferek

./: README.md  package.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  crypto.rs  lib.rs  main.rs  state.rs  vault.rs
src-tauri/src/api/: mod.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/utils/: mod.rs
src/lib/: passwordGenerator.ts  state.svelte.ts  stronghold.ts  vault.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/(auth)/sign-in/: +page.svelte
src/routes/(auth)/sign-up/: +page.svelte
src/routes/vault/: +layout.svelte  +page.svelte
src/routes/vault/[login_name]/: +page.svelte
src/routes/vault/new-login/: +page.svelte
