[package]
name = "hackcarpathia-quferek"
version = "0.1.0"
description = "Tauri App"
authors = ["Mikołaj Maciejak", "Jakub Matera"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hackcarpathia_quferek_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-stronghold = "2"
argon2 = "0.5"
zeroize = { version = "1", features = ["derive"] }
rand = "0.8"
thiserror = "1"
iota_stronghold = "2.1.0"
anyhow = "1.0.102"

[profile.dev.package.scrypt]
opt-level = 3
